Fix flexbox on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@ body {
   background-color: #444444;
   padding: 10px;
 }
+.side-bar img {
+  height: auto;
+  width: 150px;
+}
 .businesses {
   display: flex;
   flex-wrap: wrap;
@@ -52,6 +56,9 @@ body {
   right: 15px;
   top: 15px;
 }
+.modal .modal-close img {
+  width: 50px;
+}
 .modal h2 {
   font-size: 42px;
   text-align: center;
@@ -69,5 +76,13 @@ body {
   }
   .side-bar {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .side-bar img {
+    width: 100px;
+  }
+  .businesses {
+    flex-direction: column;
   }
 }
